--- a/docs/package.json
+++ b/docs/package.json
@@ -12,16 +12,17 @@
     "update-latest": "pnpm update --latest"
   },
   "dependencies": {
-    "@hono/node-server": "^1.3.1",
+    "@hono/node-server": "^1.3.2",
     "devalue": "^4.3.2",
-    "hono": "^3.11.3",
-    "hwy": "0.0.0-beta.3",
+    "hono": "^3.11.4",
+    "hwy": "workspace:*",
     "preact-render-to-string": "^6.3.1"
   },
   "devDependencies": {
-    "@hwy-js/build": "0.0.0-beta.3",
-    "@hwy-js/client": "0.0.0-beta.3",
-    "@hwy-js/dev": "0.0.0-beta.3",
+    "@hwy-js/build": "workspace:*",
+    "@hwy-js/client": "workspace:*",
+    "@hwy-js/dev": "workspace:*",
+    "@hwy-js/preact": "workspace:*",
     "@preact/signals": "^1.2.2",
     "@types/node": "^20.10.4",
     "@types/nprogress": "^0.2.3",
