--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -6,9 +6,7 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
-    "noEmit": true,
-    "jsx": "react-jsx",
-    "jsxImportSource": "preact"
+    "noEmit": true
   },
   "exclude": ["node_modules", "dist"]
 }
