--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -7,21 +7,24 @@
   "license": "MIT",
   "description": "Various utilities for Hwy framework",
   "type": "module",
-  "main": "dist/index.js",
+  "exports": {
+    ".": "./dist/index.js",
+    "./htmx": "./dist/htmx.js"
+  },
   "files": [
     "dist"
   ],
   "scripts": {
-    "build": "rm -rf dist && tsup-node index.ts --format esm --dts",
+    "build": "rm -rf dist && tsup-node index.ts htmx.ts --format esm --dts",
     "lint": "tsc",
-    "dev": "rm -rf dist && tsup-node index.ts --format esm --dts --watch --sourcemap",
+    "dev": "rm -rf dist && tsup-node index.ts htmx.ts --format esm --dts --watch",
     "publish-beta": "npm publish --tag beta",
     "publish-non-beta": "npm publish",
     "update-latest": "pnpm update --latest",
     "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
-    "hono": "^3.11.3",
+    "hono": "^3.11.4",
     "tsup": "^8.0.1",
     "typescript": "^5.3.3"
   },
