--- a/testers/cf-pages/package.json
+++ b/testers/cf-pages/package.json
@@ -12,7 +12,7 @@
     "update-latest": "pnpm update --latest"
   },
   "dependencies": {
-    "hono": "^3.11.3",
+    "hono": "^3.11.4",
     "hwy": "workspace:*",
     "preact-render-to-string": "^6.3.1"
   },
@@ -21,6 +21,7 @@
     "@hwy-js/build": "workspace:*",
     "@hwy-js/client": "workspace:*",
     "@hwy-js/dev": "workspace:*",
+    "@hwy-js/preact": "workspace:*",
     "@hwy-js/utils": "workspace:*",
     "@preact/signals": "^1.2.2",
     "@types/node": "^20.10.4",
