--- a/testers/routes/package.json
+++ b/testers/routes/package.json
@@ -11,8 +11,8 @@
   },
   "dependencies": {
     "@css-hooks/core": "^1.4.1",
-    "@hono/node-server": "^1.3.1",
-    "hono": "^3.11.3",
+    "@hono/node-server": "^1.3.2",
+    "hono": "^3.11.4",
     "hwy": "workspace:*",
     "preact-render-to-string": "^6.3.1"
   },
@@ -20,6 +20,7 @@
     "@hwy-js/build": "workspace:*",
     "@hwy-js/client": "workspace:*",
     "@hwy-js/dev": "workspace:*",
+    "@hwy-js/preact": "workspace:*",
     "@preact/signals": "^1.2.2",
     "@types/node": "^20.10.4",
     "htmx.org": "^1.9.9",
