--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,9 +6,7 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
-    "esModuleInterop": true,
-    "jsx": "react-jsx",
-    "jsxImportSource": "preact"
+    "esModuleInterop": true
   },
   "exclude": ["node_modules", "dist"]
 }
