--- a/package.json
+++ b/package.json
@@ -15,17 +15,13 @@
     "build:create-hwy": "pnpm -r --filter create-hwy run build",
     "build:client": "pnpm -r --filter @hwy-js/client run build",
     "build:utils": "pnpm -r --filter @hwy-js/utils run build",
-    "build:preact": "pnpm -r --filter @hwy-js/client run build",
-    "build:hono": "pnpm -r --filter @hwy-js/client run build",
-    "build": "pnpm build:build && pnpm build:dev && pnpm build:core && pnpm build:create-hwy && pnpm build:client && pnpm build:utils && pnpm build:preact && pnpm build:hono",
+    "build": "pnpm build:build && pnpm build:dev && pnpm build:core && pnpm build:create-hwy && pnpm build:client && pnpm build:utils",
     "lint:build": "pnpm -r --filter @hwy-js/build run lint",
     "lint:core": "pnpm -r --filter hwy run lint",
     "lint:dev": "pnpm -r --filter @hwy-js/dev run lint",
     "lint:create-hwy": "pnpm -r --filter create-hwy run lint",
     "lint:client": "pnpm -r --filter @hwy-js/client run lint",
     "lint:utils": "pnpm -r --filter @hwy-js/utils run lint",
-    "lint:preact": "pnpm -r --filter @hwy-js/client run lint",
-    "lint:hono": "pnpm -r --filter @hwy-js/client run lint",
     "lint": "npm-run-all --parallel lint:*",
     "dev:test": "npx vitest",
     "dev:build": "pnpm -r --filter @hwy-js/build run dev",
@@ -33,8 +29,6 @@
     "dev:dev": "pnpm -r --filter @hwy-js/dev run dev",
     "dev:client": "pnpm -r --filter @hwy-js/client run dev",
     "dev:utils": "pnpm -r --filter @hwy-js/utils run dev",
-    "dev:preact": "pnpm -r --filter @hwy-js/client run dev",
-    "dev:hono": "pnpm -r --filter @hwy-js/client run dev",
     "pre-test": "pnpm build && pnpm -r --filter tester-routes run build",
     "dev": "pnpm pre-test && npm-run-all --parallel dev:*",
     "add-beta": "node scripts/add-beta.js",
@@ -52,8 +46,6 @@
     "typecheck:create-hwy": "pnpm -r --filter create-hwy run typecheck",
     "typecheck:client": "pnpm -r --filter @hwy-js/client run typecheck",
     "typecheck:utils": "pnpm -r --filter @hwy-js/utils run typecheck",
-    "typecheck:preact": "pnpm -r --filter @hwy-js/client run typecheck",
-    "typecheck:hono": "pnpm -r --filter @hwy-js/client run typecheck",
     "typecheck": "npm-run-all --parallel typecheck:*",
     "pre-publish": "pnpm -r --filter create-hwy clear-asdf && pnpm typecheck && pnpm test",
     "publish-beta": "pnpm pre-publish && pnpm -r publish-beta",
