--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -13,38 +13,24 @@
   ],
   "scripts": {
     "build": "rm -rf dist && tsup-node index.ts --format esm --dts",
-    "lint": "tsc",
     "dev": "rm -rf dist && tsup-node index.ts --format esm --dts --watch",
     "publish-beta": "npm publish --tag beta",
     "publish-non-beta": "npm publish",
     "update-latest": "pnpm update --latest",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc"
+  },
+  "dependencies": {
+    "history": "^5.3.0"
   },
   "devDependencies": {
     "@preact/signals": "^1.2.2",
-    "@types/nprogress": "^0.2.3",
-    "htmx.org": "^1.9.9",
-    "idiomorph": "^0.0.9",
-    "nprogress": "^0.2.0",
     "preact": "^10.19.3",
     "tsup": "^8.0.1",
     "typescript": "^5.3.3"
   },
   "peerDependencies": {
-    "htmx.org": ">=1.9.6",
-    "idiomorph": ">=0.0.9",
-    "nprogress": ">=0.2.0"
-  },
-  "peerDependenciesMeta": {
-    "htmx.org": {
-      "optional": true
-    },
-    "idiomorph": {
-      "optional": true
-    },
-    "nprogress": {
-      "optional": true
-    }
+    "@preact/signals": "^1.2.2",
+    "preact": "^10.19.3"
   },
   "repository": {
     "type": "git",
