--- a/docs/package.json
+++ b/docs/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "vercel-build": "tsc --noEmit && hwy-build",
+    "vercel-build": "tsc && hwy-build",
     "start": "node dist/main.js",
     "dev": "hwy-dev-serve",
     "to-latest": "node ./scripts/to-latest.js && pnpm i && npm i",
@@ -25,6 +25,7 @@
     "@preact/signals": "^1.2.2",
     "@types/node": "^20.10.4",
     "@types/nprogress": "^0.2.3",
+    "history": "^5.3.0",
     "nprogress": "^0.2.0",
     "preact": "^10.19.3",
     "typescript": "^5.3.3"
