--- a/docs/tsconfig.json
+++ b/docs/tsconfig.json
@@ -1,14 +1,3 @@
 {
-  "compilerOptions": {
-    "target": "ES2022",
-    "module": "NodeNext",
-    "moduleResolution": "NodeNext",
-    "forceConsistentCasingInFileNames": true,
-    "strict": true,
-    "skipLibCheck": true,
-    "esModuleInterop": true,
-    "jsx": "react-jsx",
-    "jsxImportSource": "preact"
-  },
-  "exclude": ["node_modules", "dist"]
+  "extends": "../tsconfig.json"
 }
