--- a/examples/htmx-mpa/package.json
+++ b/examples/htmx-mpa/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "tsc --noEmit && hwy-build",
+    "build": "tsc && hwy-build",
     "start": "node dist/main.js",
     "dev": "hwy-dev-serve",
     "update-latest": "pnpm update --latest"
