--- a/examples/preact-ssr-spa/tsconfig.json
+++ b/examples/preact-ssr-spa/tsconfig.json
@@ -1,15 +1,6 @@
 {
+  "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "target": "ES2022",
-    "module": "NodeNext",
-    "moduleResolution": "NodeNext",
-    "forceConsistentCasingInFileNames": true,
-    "strict": true,
-    "skipLibCheck": true,
-    "esModuleInterop": true,
-    "jsx": "react-jsx",
-    "jsxImportSource": "preact",
     "types": ["bun-types"]
-  },
-  "exclude": ["node_modules", "dist"]
+  }
 }
