--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -16,13 +16,12 @@
     "dist"
   ],
   "scripts": {
-    "lint": "tsc",
     "build": "rm -rf dist && tsup-node index.ts --format esm --dts",
     "dev": "rm -rf dist && tsup-node index.ts --format esm --dts --watch",
     "publish-beta": "npm publish --tag beta",
     "publish-non-beta": "npm publish",
     "update-latest": "pnpm update --latest",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc"
   },
   "devDependencies": {
     "@hono/node-server": "^1.3.2",
@@ -53,7 +52,6 @@
     "metaframework",
     "web",
     "typescript",
-    "htmx",
     "hono",
     "router",
     "nested",
@@ -61,7 +59,10 @@
     "jsx",
     "tsx",
     "nextjs",
-    "remix"
+    "remix",
+    "preact",
+    "signals",
+    "jsx"
   ],
   "sideEffects": false
 }
