--- a/packages/create-hwy/package.json
+++ b/packages/create-hwy/package.json
@@ -15,12 +15,11 @@
   ],
   "scripts": {
     "build": "rm -rf dist && tsup-node index.ts --format esm",
-    "lint": "tsc",
     "create-hwy": "pnpm clear-asdf && pnpm run build && node dist/index.js",
     "publish-beta": "npm publish --tag beta",
     "publish-non-beta": "npm publish",
     "update-latest": "pnpm update --latest",
-    "typecheck": "tsc --noEmit",
+    "typecheck": "tsc",
     "clear-asdf": "rm -rf asdf",
     "print-asdf": "cat asdf/package.json"
   },
