--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -16,12 +16,11 @@
   ],
   "scripts": {
     "build": "rm -rf dist && tsup-node index.ts htmx.ts --format esm --dts",
-    "lint": "tsc",
     "dev": "rm -rf dist && tsup-node index.ts htmx.ts --format esm --dts --watch",
     "publish-beta": "npm publish --tag beta",
     "publish-non-beta": "npm publish",
     "update-latest": "pnpm update --latest",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc"
   },
   "devDependencies": {
     "hono": "^3.11.4",
