--- a/testers/routes/tsconfig.json
+++ b/testers/routes/tsconfig.json
@@ -1,17 +1,8 @@
 {
+  "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "target": "ES2022",
-    "module": "NodeNext",
-    "moduleResolution": "NodeNext",
-    "forceConsistentCasingInFileNames": true,
-    "strict": true,
-    "skipLibCheck": true,
-    "esModuleInterop": true,
-    "jsx": "react-jsx",
-    "jsxImportSource": "preact",
     "paths": {
       "~/*": ["./*"]
     }
-  },
-  "exclude": ["node_modules", "dist"]
+  }
 }
