--- a/examples/htmx-mpa/package.json
+++ b/examples/htmx-mpa/package.json
@@ -5,7 +5,8 @@
     "build": "tsc && hwy-build",
     "start": "node dist/main.js",
     "dev": "hwy-dev-serve",
-    "update-latest": "pnpm update --latest"
+    "update-latest": "pnpm update --latest",
+    "nuke": "rm -rf dist && rm -rf public/dist"
   },
   "dependencies": {
     "@hono/node-server": "^1.3.3",
