--- a/docs/tsconfig.json
+++ b/docs/tsconfig.json
@@ -1,3 +1,6 @@
 {
-  "extends": "../tsconfig.json"
+  "extends": "../tsconfig.json",
+  "compilerOptions": {
+    "jsxImportSource": "hono/jsx"
+  }
 }
