--- a/testers/routes/tsconfig.json
+++ b/testers/routes/tsconfig.json
@@ -1,8 +1,18 @@
 {
-  "extends": "../../tsconfig.json",
   "compilerOptions": {
+    "target": "ES2022",
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
+    "forceConsistentCasingInFileNames": true,
+    "strict": true,
+    "skipLibCheck": true,
+    "noEmit": true,
+    "esModuleInterop": true,
+    "jsx": "react-jsx",
+    "jsxImportSource": "preact",
     "paths": {
       "~/*": ["./*"]
     }
-  }
+  },
+  "exclude": ["node_modules", "dist"]
 }
