--- a/docs/tsconfig.json
+++ b/docs/tsconfig.json
@@ -1,6 +1,15 @@
 {
-  "extends": "../tsconfig.json",
   "compilerOptions": {
-    "jsxImportSource": "hono/jsx"
-  }
+    "target": "ES2022",
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
+    "forceConsistentCasingInFileNames": true,
+    "strict": true,
+    "skipLibCheck": true,
+    "noEmit": true,
+    "esModuleInterop": true,
+    "jsx": "react-jsx",
+    "jsxImportSource": "preact"
+  },
+  "exclude": ["node_modules", "dist"]
 }
