--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -24,6 +24,8 @@
   },
   "devDependencies": {
     "@preact/signals": "^1.2.2",
+    "@types/react": "^18.2.45",
+    "@types/react-dom": "^18.2.17",
     "preact": "^10.19.3",
     "tsup": "^8.0.1",
     "typescript": "^5.3.3"
