--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -8,9 +8,7 @@
   "description": "Simple, lightweight, and flexible web framework, built on Hono and HTMX.",
   "type": "module",
   "exports": {
-    ".": "./dist/index.js",
-    "./hono": "./dist/hono.js",
-    "./preact": "./dist/preact.js"
+    ".": "./dist/index.js"
   },
   "files": [
     "dist"
@@ -23,19 +21,22 @@
     "update-latest": "pnpm update --latest",
     "typecheck": "tsc"
   },
+  "dependencies": {
+    "devalue": "^4.3.2",
+    "preact-render-to-string": "^6.3.1"
+  },
   "devDependencies": {
     "@hono/node-server": "^1.3.3",
     "@hwy-js/build": "workspace:*",
     "@hwy-js/dev": "workspace:*",
     "@types/node": "^20.10.4",
-    "devalue": "^4.3.2",
     "hono": "^3.11.7",
     "preact": "^10.19.3",
-    "preact-render-to-string": "^6.3.1",
     "tsup": "^8.0.1"
   },
   "peerDependencies": {
-    "hono": "^3.11.1"
+    "hono": "^3.11.1",
+    "preact": "^10.19.3"
   },
   "repository": {
     "type": "git",
@@ -60,9 +61,9 @@
     "tsx",
     "nextjs",
     "remix",
+    "react",
     "preact",
-    "signals",
-    "jsx"
+    "signals"
   ],
   "sideEffects": false
 }
