--- a/testers/routes/package.json
+++ b/testers/routes/package.json
@@ -14,7 +14,7 @@
     "@hono/node-server": "^1.3.3",
     "hono": "^3.11.7",
     "hwy": "workspace:*",
-    "preact-render-to-string": "^6.3.1"
+    "preact": "^10.19.3"
   },
   "devDependencies": {
     "@hwy-js/build": "workspace:*",
@@ -22,7 +22,6 @@
     "@hwy-js/dev": "workspace:*",
     "@preact/signals": "^1.2.2",
     "@types/node": "^20.10.4",
-    "preact": "^10.19.3",
     "typescript": "^5.3.3"
   },
   "engines": {
