--- a/examples/preact-ssr-spa/package.json
+++ b/examples/preact-ssr-spa/package.json
@@ -5,7 +5,8 @@
     "build": "tsc && hwy-build",
     "start": "bun dist/main.js",
     "dev": "bun run --bun hwy-dev-serve",
-    "update-latest": "pnpm update --latest"
+    "update-latest": "pnpm update --latest",
+    "nuke": "rm -rf dist && rm -rf public/dist"
   },
   "dependencies": {
     "hono": "^3.11.7",
