--- a/docs/package.json
+++ b/docs/package.json
@@ -16,13 +16,13 @@
     "@hono/node-server": "^1.3.3",
     "devalue": "^4.3.2",
     "hono": "^3.11.7",
-    "hwy": "workspace:*",
+    "hwy": "0.0.0-beta.5",
     "preact-render-to-string": "^6.3.1"
   },
   "devDependencies": {
-    "@hwy-js/build": "workspace:*",
-    "@hwy-js/client": "workspace:*",
-    "@hwy-js/dev": "workspace:*",
+    "@hwy-js/build": "0.0.0-beta.5",
+    "@hwy-js/client": "0.0.0-beta.5",
+    "@hwy-js/dev": "0.0.0-beta.5",
     "@preact/signals": "^1.2.2",
     "@types/node": "^20.10.4",
     "@types/nprogress": "^0.2.3",
