--- a/testers/bun/package.json
+++ b/testers/bun/package.json
@@ -1,12 +1,14 @@
 {
+  "name": "bun-tester",
+  "version": "0.0.0",
   "private": true,
   "type": "module",
   "scripts": {
+    "hwy-prebuild": "tailwindcss -i src/styles/tw-input.css -o src/styles/tw-output.bundle.css",
     "build": "tsc && hwy-build",
     "start": "bun dist/main.js",
     "dev": "bun run --bun hwy-dev-serve",
-    "update-latest": "pnpm update --latest",
-    "nuke": "rm -rf dist && rm -rf public/dist"
+    "update-latest": "pnpm update --latest"
   },
   "dependencies": {
     "hwy": "workspace:*",
@@ -14,10 +16,15 @@
   },
   "devDependencies": {
     "@hwy-js/build": "workspace:*",
+    "@hwy-js/client": "workspace:*",
     "@hwy-js/dev": "workspace:*",
+    "@hwy-js/utils": "workspace:*",
+    "@preact/signals": "^1.2.2",
+    "@types/node": "^20.11.25",
     "bun-types": "^1.0.30",
     "preact": "^10.19.6",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5.4.2",
-    "wouter-preact": "^3.0.2"
+    "wrangler": "^3.31.0"
   }
 }
