--- a/examples/htmx-node/package.json
+++ b/examples/htmx-node/package.json
@@ -4,10 +4,9 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "hwy-prebuild": "tailwindcss -i src/styles/tw-input.css -o src/styles/tw-output.bundle.css",
     "build": "tsc && hwy-build",
-    "start": "bun dist/main.js",
-    "dev": "bun run --bun hwy-dev-serve",
+    "start": "node dist/main.js",
+    "dev": "hwy-dev-serve",
     "update-latest": "pnpm update --latest"
   },
   "dependencies": {
@@ -19,12 +18,12 @@
     "@hwy-js/client": "workspace:*",
     "@hwy-js/dev": "workspace:*",
     "@hwy-js/utils": "workspace:*",
-    "@preact/signals": "^1.2.2",
     "@types/node": "^20.11.25",
-    "bun-types": "^1.0.30",
+    "@types/nprogress": "^0.2.3",
+    "htmx.org": "^1.9.10",
+    "idiomorph": "^0.3.0",
+    "nprogress": "^0.2.0",
     "preact": "^10.19.6",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.4.2",
-    "wrangler": "^3.31.0"
+    "typescript": "^5.4.2"
   }
 }
