--- a/examples/preact-bun/package.json
+++ b/examples/preact-bun/package.json
@@ -1,19 +1,16 @@
 {
-  "name": "docs",
+  "name": "bun-tester",
   "version": "0.0.0",
   "private": true,
   "type": "module",
   "scripts": {
+    "hwy-prebuild": "tailwindcss -i src/styles/tw-input.css -o src/styles/tw-output.bundle.css",
     "build": "tsc && hwy-build",
-    "start": "node dist/main.js",
-    "dev": "hwy-dev-serve",
-    "to-latest": "node ./scripts/to-latest.js && pnpm i && npm i",
-    "to-workspace": "node ./scripts/to-workspace.js && pnpm i",
-    "update-latest": "pnpm update --latest",
-    "nuke": "rm -rf dist && rm -rf public/dist"
+    "start": "bun dist/main.js",
+    "dev": "bun run --bun hwy-dev-serve",
+    "update-latest": "pnpm update --latest"
   },
   "dependencies": {
-    "devalue": "^4.3.2",
     "hwy": "workspace:*",
     "preact-render-to-string": "^6.4.0"
   },
@@ -21,14 +18,12 @@
     "@hwy-js/build": "workspace:*",
     "@hwy-js/client": "workspace:*",
     "@hwy-js/dev": "workspace:*",
+    "@hwy-js/utils": "workspace:*",
     "@preact/signals": "^1.2.2",
     "@types/node": "^20.11.25",
-    "@types/nprogress": "^0.2.3",
-    "nprogress": "^0.2.0",
+    "bun-types": "^1.0.30",
     "preact": "^10.19.6",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5.4.2"
-  },
-  "engines": {
-    "node": ">=18.14.1"
   }
 }
