--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -33,9 +33,6 @@
     "preact": "^10.19.6",
     "tsup": "^8.0.2"
   },
-  "peerDependencies": {
-    "preact": "^10.19.3"
-  },
   "repository": {
     "type": "git",
     "url": "https://github.com/hwy-js/hwy",
@@ -51,6 +48,7 @@
     "metaframework",
     "web",
     "typescript",
+    "unjs",
     "h3",
     "router",
     "nested",
