--- a/examples/htmx/package.json
+++ b/examples/htmx/package.json
@@ -1,6 +1,5 @@
 {
-  "name": "bun-tester",
-  "version": "0.0.0",
+  "name": "hwy-example-htmx",
   "private": true,
   "type": "module",
   "scripts": {
