--- a/examples/minimal-mpa/package.json
+++ b/examples/minimal-mpa/package.json
@@ -1,9 +1,8 @@
 {
-  "name": "hwy-example-preact",
+  "name": "hwy-example-minimal-mpa",
   "private": true,
   "type": "module",
   "scripts": {
-    "hwy-prebuild": "tailwindcss -i src/styles/tw-input.css -o src/styles/tw-output.bundle.css",
     "build": "tsc && hwy-build",
     "start": "node dist/main.js",
     "dev": "hwy-dev-serve",
@@ -18,10 +17,8 @@
     "@hwy-js/client": "workspace:*",
     "@hwy-js/dev": "workspace:*",
     "@hwy-js/utils": "workspace:*",
-    "@preact/signals": "^1.2.2",
     "@types/node": "^20.11.25",
     "preact": "^10.19.6",
-    "tailwindcss": "^3.4.1",
     "typescript": "^5.4.2"
   }
 }
