--- a/examples/preact/.gitignore
+++ b/examples/preact/.gitignore
@@ -1,16 +1,14 @@
 # standard exclusions
 node_modules
 
-# system artifacts
-.DS_Store
-
 # build artifacts
 dist
 public/dist
 
 # environment files
 .env
-.env.local
+.env.*
+!env.example
 
 # tailwind artifacts
 src/styles/tw-output.bundle.css
