--- a/package.json
+++ b/package.json
@@ -12,10 +12,9 @@
     "build:build": "pnpm -r --filter @hwy-js/build run build",
     "build:core": "pnpm -r --filter hwy run build",
     "build:dev": "pnpm -r --filter @hwy-js/dev run build",
-    "build:create-hwy": "pnpm -r --filter create-hwy run build",
     "build:client": "pnpm -r --filter @hwy-js/client run build",
     "build:utils": "pnpm -r --filter @hwy-js/utils run build",
-    "build": "pnpm build:build && pnpm build:dev && pnpm build:core && pnpm build:create-hwy && pnpm build:client && pnpm build:utils",
+    "build": "pnpm build:build && pnpm build:dev && pnpm build:core && pnpm build:client && pnpm build:utils",
     "dev:test": "npx vitest",
     "dev:build": "pnpm -r --filter @hwy-js/build run dev",
     "dev:core": "pnpm -r --filter hwy run dev",
@@ -36,11 +35,10 @@
     "typecheck:build": "pnpm -r --filter @hwy-js/build run typecheck",
     "typecheck:core": "pnpm -r --filter hwy run typecheck",
     "typecheck:dev": "pnpm -r --filter @hwy-js/dev run typecheck",
-    "typecheck:create-hwy": "pnpm -r --filter create-hwy run typecheck",
     "typecheck:client": "pnpm -r --filter @hwy-js/client run typecheck",
     "typecheck:utils": "pnpm -r --filter @hwy-js/utils run typecheck",
     "typecheck": "npm-run-all --parallel typecheck:*",
-    "pre-publish": "pnpm -r --filter create-hwy clear-asdf && pnpm typecheck && pnpm test",
+    "pre-publish": "pnpm typecheck && pnpm test",
     "publish-beta": "pnpm pre-publish && pnpm -r publish-beta",
     "publish-non-beta": "pnpm pre-publish && pnpm -r publish-non-beta",
     "update-latest": "pnpm update --latest && pnpm -r update-latest && pnpm i"
