--- a/docs/package.json
+++ b/docs/package.json
@@ -15,17 +15,18 @@
   "dependencies": {
     "devalue": "^4.3.2",
     "hwy": "workspace:*",
-    "preact-render-to-string": "^6.4.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@hwy-js/build": "workspace:*",
     "@hwy-js/client": "workspace:*",
     "@hwy-js/dev": "workspace:*",
-    "@preact/signals": "^1.2.2",
     "@types/node": "^20.11.26",
     "@types/nprogress": "^0.2.3",
+    "@types/react": "^18.2.66",
+    "@types/react-dom": "^18.2.22",
     "nprogress": "^0.2.0",
-    "preact": "^10.19.6",
     "typescript": "^5.4.2"
   },
   "engines": {
