--- a/examples/react/package.json
+++ b/examples/react/package.json
@@ -1,26 +1,28 @@
 {
-  "name": "hwy-example-preact",
+  "name": "hwy-example-react",
   "private": true,
   "type": "module",
   "scripts": {
-    "hwy-prebuild": "tailwindcss -i src/styles/tw-input.css -o src/styles/tw-output.bundle.css",
+    "hwy-prebuild": "tailwindcss -i src/styles/tw-input.css -o src/styles/normal/tw-output.css",
     "build": "tsc && hwy-build",
     "start": "node dist/main.js",
     "dev": "hwy-dev-serve",
     "update-latest": "pnpm update --latest"
   },
   "dependencies": {
+    "h3": "^1.11.1",
     "hwy": "workspace:*",
-    "preact-render-to-string": "^6.4.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@hwy-js/build": "workspace:*",
     "@hwy-js/client": "workspace:*",
     "@hwy-js/dev": "workspace:*",
     "@hwy-js/utils": "workspace:*",
-    "@preact/signals": "^1.2.2",
     "@types/node": "^20.11.26",
-    "preact": "^10.19.6",
+    "@types/react": "^18.2.66",
+    "@types/react-dom": "^18.2.22",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.4.2"
   }
