--- a/examples/htmx/package.json
+++ b/examples/htmx/package.json
@@ -9,8 +9,10 @@
     "update-latest": "pnpm update --latest"
   },
   "dependencies": {
+    "h3": "^1.11.1",
     "hwy": "workspace:*",
-    "preact-render-to-string": "^6.4.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@hwy-js/build": "workspace:*",
@@ -18,10 +20,11 @@
     "@hwy-js/utils": "workspace:*",
     "@types/node": "^20.11.26",
     "@types/nprogress": "^0.2.3",
+    "@types/react": "^18.2.66",
+    "@types/react-dom": "^18.2.22",
     "htmx.org": "^1.9.10",
     "idiomorph": "^0.3.0",
     "nprogress": "^0.2.0",
-    "preact": "^10.19.6",
     "typescript": "^5.4.2"
   }
 }
