--- a/examples/minimal-mpa/package.json
+++ b/examples/minimal-mpa/package.json
@@ -9,15 +9,18 @@
     "update-latest": "pnpm update --latest"
   },
   "dependencies": {
+    "h3": "^1.11.1",
     "hwy": "workspace:*",
-    "preact-render-to-string": "^6.4.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@hwy-js/build": "workspace:*",
     "@hwy-js/dev": "workspace:*",
     "@hwy-js/utils": "workspace:*",
     "@types/node": "^20.11.26",
-    "preact": "^10.19.6",
+    "@types/react": "^18.2.66",
+    "@types/react-dom": "^18.2.22",
     "typescript": "^5.4.2"
   }
 }
