--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hwy-js/client",
-  "version": "0.0.0-beta.57",
+  "version": "0.0.0-beta.59",
   "author": {
     "name": "Samuel J. Cook"
   },
@@ -20,9 +20,11 @@
     "typecheck": "tsc"
   },
   "devDependencies": {
-    "@preact/signals": "^1.2.2",
+    "@types/react": "^18.2.66",
+    "@types/react-dom": "^18.2.22",
     "history": "^5.3.0",
-    "preact": "^10.19.6",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tsup": "^8.0.2",
     "typescript": "^5.4.2"
   },
