--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,11 +1,11 @@
 {
   "name": "hwy",
-  "version": "0.0.0-beta.57",
+  "version": "0.0.0-beta.59",
   "author": {
     "name": "Samuel J. Cook"
   },
   "license": "MIT",
-  "description": "Simple, lightweight, and flexible web framework, built on h3, esbuild, and Preact.",
+  "description": "Simple, lightweight, and flexible web framework, built on h3, esbuild, and React.",
   "type": "module",
   "exports": {
     ".": "./dist/index.js"
@@ -22,15 +22,17 @@
     "typecheck": "tsc"
   },
   "dependencies": {
-    "devalue": "^4.3.2",
-    "preact-render-to-string": "^6.4.0"
+    "devalue": "^4.3.2"
   },
   "devDependencies": {
     "@hwy-js/build": "workspace:*",
     "@hwy-js/dev": "workspace:*",
     "@types/node": "^20.11.26",
+    "@types/react": "^18.2.66",
+    "@types/react-dom": "^18.2.22",
     "h3": "^1.11.1",
-    "preact": "^10.19.6",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tsup": "^8.0.2"
   },
   "repository": {
@@ -57,9 +59,7 @@
     "tsx",
     "nextjs",
     "remix",
-    "react",
-    "preact",
-    "signals"
+    "react"
   ],
   "sideEffects": false
 }
