--- a/package.json
+++ b/package.json
@@ -45,9 +45,13 @@
   },
   "devDependencies": {
     "@types/node": "^20.11.27",
+    "@types/react": "^18.2.66",
+    "@types/react-dom": "^18.2.22",
     "h3": "^1.11.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.2.5",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "typescript": "^5.4.2",
     "vitest": "^1.3.1"
   },
