--- a/docs/.gitignore
+++ b/docs/.gitignore
@@ -1,13 +1,11 @@
 # standard exclusions
 node_modules
 
-# system artifacts
-.DS_Store
-
 # build artifacts
 dist
 public/dist
 
 # environment files
 .env
-.env.local
+.env.*
+!env.example
