--- a/docs/package.json
+++ b/docs/package.json
@@ -14,15 +14,15 @@
   "dependencies": {
     "gray-matter": "^4.0.3",
     "h3": "^1.11.1",
-    "hwy": "workspace:*",
+    "hwy": "0.0.0-beta.67",
     "markdown-it": "^14.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@hwy-js/build": "workspace:*",
-    "@hwy-js/client": "workspace:*",
-    "@hwy-js/dev": "workspace:*",
+    "@hwy-js/build": "0.0.0-beta.67",
+    "@hwy-js/client": "0.0.0-beta.67",
+    "@hwy-js/dev": "0.0.0-beta.67",
     "@shikijs/markdown-it": "^1.2.0",
     "@types/markdown-it": "^13.0.7",
     "@types/node": "^20.11.28",
