--- a/docs/Dockerfile
+++ b/docs/Dockerfile
@@ -4,6 +4,7 @@ WORKDIR /app
 COPY package*.json ./
 RUN npm install
 RUN npm run build
+RUN npm prune --production
 
 # Production stage
 FROM node:20-alpine AS production
