--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hwy-js/client",
-  "version": "0.0.0-beta.67",
+  "version": "0.0.0-beta.68",
   "author": {
     "name": "Samuel J. Cook"
   },
@@ -19,10 +19,12 @@
     "update-latest": "pnpm update --latest",
     "typecheck": "tsc"
   },
+  "dependencies": {
+    "history": "^5.3.0"
+  },
   "devDependencies": {
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
-    "history": "^5.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tsup": "^8.0.2",
