--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,19 +1,22 @@
 {
   "name": "@hwy-js/client",
-  "version": "0.0.0-beta.69",
+  "version": "0.0.0-beta.70",
   "author": {
     "name": "Samuel J. Cook"
   },
   "license": "MIT",
   "description": "Browser-targeted utilities for Hwy framework",
   "type": "module",
-  "main": "dist/index.js",
+  "exports": {
+    ".": "./dist/index.js",
+    "./react": "./dist/react.js"
+  },
   "files": [
     "dist"
   ],
   "scripts": {
-    "build": "rm -rf dist && tsup-node index.ts --format esm --dts",
-    "dev": "rm -rf dist && tsup-node index.ts --format esm --dts --watch",
+    "build": "rm -rf dist && tsup-node index.ts react.ts --format esm --dts",
+    "dev": "rm -rf dist && tsup-node index.ts react.ts --format esm --dts --watch",
     "publish-beta": "npm publish --tag beta",
     "publish-non-beta": "npm publish",
     "update-latest": "pnpm update --latest",
