--- a/testers/routes/package.json
+++ b/testers/routes/package.json
@@ -18,6 +18,7 @@
     "@hwy-js/build": "workspace:*",
     "@hwy-js/client": "workspace:*",
     "@hwy-js/dev": "workspace:*",
+    "@hwy-js/react": "workspace:*",
     "@types/node": "^20.11.28",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
