--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@hwy-js/utils",
+  "name": "@hwy-js/react",
   "version": "0.0.0-beta.73",
   "author": {
     "name": "Samuel J. Cook"
   },
   "license": "MIT",
-  "description": "Various utilities for Hwy framework",
+  "description": "React components for Hwy framework",
   "type": "module",
   "exports": {
     ".": "./dist/index.js"
@@ -22,14 +22,17 @@
     "typecheck": "tsc"
   },
   "devDependencies": {
-    "h3": "^1.11.1",
+    "@types/react": "^18.2.66",
+    "@types/react-dom": "^18.2.22",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tsup": "^8.0.2",
     "typescript": "^5.4.2"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/hwy-js/hwy",
-    "directory": "packages/utils"
+    "directory": "packages/react"
   },
   "homepage": "https://hwy.dev",
   "bugs": "https://github.com/hwy-js/hwy/issues",
