--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "update-latest": "pnpm update --latest && pnpm -r update-latest && pnpm i"
   },
   "devDependencies": {
+    "@types/node": "^20.12.7",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.2.5",
     "typescript": "^5.4.4",
