--- a/docs/package.json
+++ b/docs/package.json
@@ -12,10 +12,10 @@
     "nuke": "rm -rf dist && rm -rf public/dist"
   },
   "dependencies": {
-    "@hwy-js/h3": "workspace:*",
-    "@hwy-js/react": "workspace:*",
+    "@hwy-js/h3": "0.8.1",
+    "@hwy-js/react": "0.8.1",
     "@shikijs/markdown-it": "^1.3.0",
-    "hwy": "workspace:*",
+    "hwy": "0.8.1",
     "gray-matter": "^4.0.3",
     "h3": "^1.11.1",
     "markdown-it": "^14.1.0",
@@ -24,9 +24,9 @@
     "shiki": "^1.3.0"
   },
   "devDependencies": {
-    "@hwy-js/build": "workspace:*",
-    "@hwy-js/client": "workspace:*",
-    "@hwy-js/dev": "workspace:*",
+    "@hwy-js/build": "0.8.1",
+    "@hwy-js/client": "0.8.1",
+    "@hwy-js/dev": "0.8.1",
     "@types/markdown-it": "^14.0.0",
     "@types/node": "^20.12.7",
     "@types/react": "^18.2.75",
