--- a/docs/package.json
+++ b/docs/package.json
@@ -15,13 +15,14 @@
     "@hwy-js/h3": "0.8.2",
     "@hwy-js/react": "0.8.2",
     "@shikijs/markdown-it": "^1.3.0",
-    "hwy": "0.8.2",
     "gray-matter": "^4.0.3",
     "h3": "^1.11.1",
+    "hwy": "0.8.2",
     "markdown-it": "^14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "shiki": "^1.3.0"
+    "shiki": "^1.3.0",
+    "use-html-dialog": "^0.2.1"
   },
   "devDependencies": {
     "@hwy-js/build": "0.8.2",
@@ -32,7 +33,6 @@
     "@types/react": "^18.2.75",
     "@types/react-dom": "^18.2.24",
     "typescript": "^5.4.4",
-    "use-html-dialog": "^0.2.1",
     "usehooks-ts": "^3.1.0"
   }
 }
