--- a/docs/package.json
+++ b/docs/package.json
@@ -22,7 +22,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "shiki": "^1.3.0",
-    "use-html-dialog": "^0.2.1"
+    "use-html-dialog": "^0.2.1",
+    "usehooks-ts": "^3.1.0"
   },
   "devDependencies": {
     "@hwy-js/build": "0.8.2",
@@ -32,7 +33,6 @@
     "@types/node": "^20.12.7",
     "@types/react": "^18.2.75",
     "@types/react-dom": "^18.2.24",
-    "typescript": "^5.4.4",
-    "usehooks-ts": "^3.1.0"
+    "typescript": "^5.4.4"
   }
 }
