--- a/docs/package.json
+++ b/docs/package.json
@@ -4,20 +4,20 @@
   "type": "module",
   "scripts": {
     "build": "tsc && hwy-build",
-    "start": "node dist/main.js",
-    "dev": "hwy-dev-serve",
-    "to-latest": "node ./scripts/to_latest.js && pnpm i && npm i",
+    "start": "bun dist/main.js",
+    "dev": "bun run --bun hwy-dev-serve",
+    "to-latest": "node ./scripts/to_latest.js && pnpm i",
     "to-workspace": "node ./scripts/to_workspace.js && pnpm i",
     "update-latest": "pnpm update --latest",
     "nuke": "rm -rf dist && rm -rf public/dist"
   },
   "dependencies": {
-    "@hwy-js/h3": "0.8.4",
-    "@hwy-js/react": "0.8.4",
+    "@hwy-js/h3": "0.8.5",
+    "@hwy-js/react": "0.8.5",
     "@shikijs/markdown-it": "^1.3.0",
     "gray-matter": "^4.0.3",
     "h3": "^1.11.1",
-    "hwy": "0.8.4",
+    "hwy": "0.8.5",
     "markdown-it": "^14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -26,13 +26,13 @@
     "usehooks-ts": "^3.1.0"
   },
   "devDependencies": {
-    "@hwy-js/build": "0.8.4",
-    "@hwy-js/client": "0.8.4",
-    "@hwy-js/dev": "0.8.4",
+    "@hwy-js/build": "0.8.5",
+    "@hwy-js/client": "0.8.5",
+    "@hwy-js/dev": "0.8.5",
     "@types/markdown-it": "^14.0.0",
-    "@types/node": "^20.12.7",
     "@types/react": "^18.2.75",
     "@types/react-dom": "^18.2.24",
+    "bun-types": "^1.1.3",
     "typescript": "^5.4.4"
   }
 }
