update docs dockerfile

--- a/docs/Dockerfile
+++ b/docs/Dockerfile
@@ -9,8 +9,7 @@ RUN bun run build
 # Production stage
 FROM oven/bun:alpine AS production
 WORKDIR /app
-COPY package*.json ./
-RUN bun install --ci
+COPY --from=builder /app/node_modules ./node_modules
 COPY --from=builder /app/dist ./dist
 COPY --from=builder /app/public/dist ./public/dist
 COPY --from=builder /app/markdown ./markdown
