docs - bun updates

--- a/docs/Dockerfile
+++ b/docs/Dockerfile
@@ -1,7 +1,7 @@
 # Install and Build Stage
 FROM oven/bun:alpine AS builder
 WORKDIR /app
-COPY package*.json ./
+COPY package.json bun.lockb ./
 RUN bun install
 COPY . .
 RUN bun run build
@@ -9,9 +9,10 @@ RUN bun run build
 # Production stage
 FROM oven/bun:alpine AS production
 WORKDIR /app
-COPY --from=builder /app/node_modules ./node_modules
-COPY --from=builder /app/dist ./dist
-COPY --from=builder /app/public/dist ./public/dist
-COPY --from=builder /app/markdown ./markdown
-COPY --from=builder /app/package.json ./package.json
+COPY package.json bun.lockb ./
+RUN bun install --production
+COPY --from=builder /app/dist ./
+COPY --from=builder /app/public/dist ./
+COPY --from=builder /app/markdown ./
+COPY --from=builder /app/package.json ./
 CMD ["bun", "start"]
