--- a/docs/package.json
+++ b/docs/package.json
@@ -4,9 +4,9 @@
   "type": "module",
   "scripts": {
     "build": "tsc && hwy-build",
-    "start": "bun dist/main.js",
-    "dev": "bun run --bun hwy-dev-serve",
-    "to-latest": "bun ./scripts/to_latest.js && bun i",
+    "start": "node dist/main.js",
+    "dev": "hwy-dev-serve",
+    "to-latest": "node ./scripts/to_latest.js && pnpm i",
     "to-workspace": "bun ./scripts/to_workspace.js && pnpm i",
     "update-latest": "pnpm update --latest",
     "nuke": "rm -rf dist && rm -rf public/dist"
@@ -15,6 +15,7 @@
     "@hwy-js/h3": "0.8.5",
     "@hwy-js/react": "0.8.5",
     "@shikijs/markdown-it": "^1.3.0",
+    "@types/node": "^20.12.7",
     "gray-matter": "^4.0.3",
     "h3": "^1.11.1",
     "hwy": "0.8.5",
@@ -32,7 +33,6 @@
     "@types/markdown-it": "^14.0.0",
     "@types/react": "^18.2.75",
     "@types/react-dom": "^18.2.24",
-    "bun-types": "^1.1.3",
     "typescript": "^5.4.4"
   }
 }
