--- a/docs/package.json
+++ b/docs/package.json
@@ -12,13 +12,13 @@
     "nuke": "rm -rf dist && rm -rf public/dist"
   },
   "dependencies": {
-    "@hwy-js/h3": "0.9.0",
-    "@hwy-js/react": "0.9.0",
+    "@hwy-js/h3": "^0.11.0",
+    "@hwy-js/react": "^0.11.0",
     "@shikijs/markdown-it": "^1.3.0",
     "@types/node": "^20.12.7",
     "gray-matter": "^4.0.3",
     "h3": "^1.11.1",
-    "hwy": "0.9.0",
+    "hwy": "^0.11.0",
     "markdown-it": "^14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -27,9 +27,9 @@
     "usehooks-ts": "^3.1.0"
   },
   "devDependencies": {
-    "@hwy-js/build": "0.9.0",
-    "@hwy-js/client": "0.9.0",
-    "@hwy-js/dev": "0.9.0",
+    "@hwy-js/build": "^0.11.0",
+    "@hwy-js/client": "^0.11.0",
+    "@hwy-js/dev": "^0.11.0",
     "@types/markdown-it": "^14.0.0",
     "@types/react": "^18.2.75",
     "@types/react-dom": "^18.2.24",
