--- a/examples/preact/package.json
+++ b/examples/preact/package.json
@@ -8,19 +8,19 @@
     "dev": "hwy-dev-serve"
   },
   "dependencies": {
-    "@hwy-js/h3": "0.10.0",
-    "@hwy-js/react": "0.10.0",
+    "@hwy-js/h3": "^0.11.0",
+    "@hwy-js/react": "^0.11.0",
     "h3": "^1.11.1",
-    "hwy": "0.10.0",
+    "hwy": "^0.11.0",
     "preact": "^10.20.2",
     "preact-render-to-string": "^6.4.2",
     "react": "npm:@preact/compat",
     "react-dom": "npm:@preact/compat"
   },
   "devDependencies": {
-    "@hwy-js/build": "0.10.0",
-    "@hwy-js/client": "0.10.0",
-    "@hwy-js/dev": "0.10.0",
+    "@hwy-js/build": "^0.11.0",
+    "@hwy-js/client": "^0.11.0",
+    "@hwy-js/dev": "^0.11.0",
     "@types/node": "^20.12.7",
     "typescript": "^5.4.4"
   }
