--- a/docs/.gitignore
+++ b/docs/.gitignore
@@ -1,11 +1,4 @@
-# standard exclusions
-node_modules
-
-# build artifacts
-dist
-public/dist
-
-# environment files
-.env
-.env.*
-!env.example
+# Artifacts
+static/private/hwy_paths.json
+static/public/__nohash
+static/public/hwy_client_entry.js
