--- a/docs/package.json
+++ b/docs/package.json
@@ -2,37 +2,16 @@
   "name": "docs",
   "private": true,
   "type": "module",
-  "scripts": {
-    "build": "tsc && hwy-build",
-    "start": "node dist/main.js",
-    "dev": "hwy-dev-serve",
-    "to-latest": "node ./scripts/to_latest.js && pnpm i",
-    "to-workspace": "bun ./scripts/to_workspace.js && pnpm i",
-    "update-latest": "pnpm update --latest",
-    "nuke": "rm -rf dist && rm -rf public/dist"
-  },
-  "dependencies": {
-    "@hwy-js/h3": "^0.11.0",
+  "devDependencies": {
+    "@hwy-js/client": "^0.11.0",
     "@hwy-js/react": "^0.11.0",
     "@shikijs/markdown-it": "^1.3.0",
-    "@types/node": "^20.12.7",
-    "gray-matter": "^4.0.3",
-    "h3": "^1.11.1",
-    "hwy": "^0.11.0",
+    "@types/markdown-it": "^14.0.0",
     "markdown-it": "^14.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "preact": "^10.20.2",
     "shiki": "^1.3.0",
+    "typescript": "^5.4.3",
     "use-html-dialog": "^0.2.1",
     "usehooks-ts": "^3.1.0"
-  },
-  "devDependencies": {
-    "@hwy-js/build": "^0.11.0",
-    "@hwy-js/client": "^0.11.0",
-    "@hwy-js/dev": "^0.11.0",
-    "@types/markdown-it": "^14.0.0",
-    "@types/react": "^18.2.75",
-    "@types/react-dom": "^18.2.24",
-    "typescript": "^5.4.4"
   }
 }
