--- a/docs/package.json
+++ b/docs/package.json
@@ -5,11 +5,8 @@
   "devDependencies": {
     "@hwy-js/client": "^0.11.0",
     "@hwy-js/react": "^0.11.0",
-    "@shikijs/markdown-it": "^1.3.0",
-    "@types/markdown-it": "^14.0.0",
-    "markdown-it": "^14.1.0",
+    "highlight.js": "^11.9.0",
     "preact": "^10.20.2",
-    "shiki": "^1.3.0",
     "typescript": "^5.4.3",
     "use-html-dialog": "^0.2.1",
     "usehooks-ts": "^3.1.0"
