--- a/docs/package.json
+++ b/docs/package.json
@@ -3,9 +3,11 @@
   "private": true,
   "type": "module",
   "devDependencies": {
-    "@hwy-js/client": "^0.11.0",
-    "@hwy-js/react": "^0.11.0",
+    "@hwy-js/client": "^0.12.0",
+    "@hwy-js/react": "^0.12.0",
+    "@types/nprogress": "^0.2.3",
     "highlight.js": "^11.9.0",
+    "nprogress": "^0.2.0",
     "preact": "^10.20.2",
     "typescript": "^5.4.3",
     "use-html-dialog": "^0.2.1",
