--- a/projects/testers/routes/package.json
+++ b/projects/testers/routes/package.json
@@ -2,10 +2,14 @@
   "devDependencies": {
     "@hwy-js/client": "workspace:*",
     "@hwy-js/react": "workspace:*",
-    "@types/react": "^18.2.69",
-    "@types/react-dom": "^18.2.22",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "@types/react": "npm:types-react@rc",
+    "@types/react-dom": "npm:types-react-dom@rc",
+    "react": "19.0.0-rc-f38c22b244-20240704",
+    "react-dom": "19.0.0-rc-f38c22b244-20240704",
     "typescript": "^5.4.3"
+  },
+  "overrides": {
+    "@types/react": "npm:types-react@rc",
+    "@types/react-dom": "npm:types-react-dom@rc"
   }
 }
