add lit pkg, add prefetch utils to client pkg, update pkg jsons, tidy

--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "scripts": {
     "build:client": "pnpm -r --filter @hwy-js/client run build",
     "build:react": "pnpm -r --filter @hwy-js/react run build",
-    "build": "pnpm build:client && pnpm build:react",
+    "build:lit": "pnpm -r --filter @hwy-js/lit run build",
+    "build": "pnpm build:client && pnpm build:react && pnpm build:lit",
     "dev:test": "npx vitest",
     "dev:client": "pnpm -r --filter @hwy-js/client run dev",
     "dev:react": "pnpm -r --filter @hwy-js/react run dev",
+    "dev:lit": "pnpm -r --filter @hwy-js/lit run dev",
     "dev": "pnpm build && npm-run-all --parallel dev:*",
     "add-pre": "node scripts/npm/add_pre.js",
     "remove-pre": "node scripts/npm/remove_pre.js",
@@ -26,6 +28,7 @@
     "test": "pnpm build && npx vitest run",
     "typecheck:client": "pnpm -r --filter @hwy-js/client run typecheck",
     "typecheck:react": "pnpm -r --filter @hwy-js/react run typecheck",
+    "typecheck:lit": "pnpm -r --filter @hwy-js/lit run typecheck",
     "typecheck": "npm-run-all --parallel typecheck:*",
     "pre-publish": "pnpm typecheck && pnpm test",
     "publish-pre": "pnpm pre-publish && pnpm -r publish-pre",
