--- a/packages/npm/client/package.json
+++ b/packages/npm/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hwy-js/client",
-  "version": "0.15.0-pre.20",
+  "version": "0.15.0-pre.22",
   "author": {
     "name": "Samuel J. Cook"
   },
@@ -15,8 +15,8 @@
   "scripts": {
     "build": "rm -rf dist && tsup-node index.ts --format esm --dts",
     "dev": "rm -rf dist && tsup-node index.ts --format esm --dts --watch",
-    "publish-pre": "npm publish --tag pre",
-    "publish-non-pre": "npm publish",
+    "publish-pre": "npm publish --access public --tag pre",
+    "publish-non-pre": "npm publish --access public",
     "update-latest": "pnpm update --latest",
     "typecheck": "tsc"
   },
@@ -30,7 +30,7 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/sjc5/hwy",
-    "directory": "packages/client"
+    "directory": "packages/npm/client"
   },
   "homepage": "https://hwy.dev",
   "bugs": "https://github.com/sjc5/hwy/issues",
