--- a/packages/npm/lit/package.json
+++ b/packages/npm/lit/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@hwy-js/react",
+  "name": "@hwy-js/lit",
   "version": "0.15.0-pre.22",
   "author": {
     "name": "Samuel J. Cook"
   },
-  "description": "React utilities for Hwy framework",
+  "description": "Lit utilities for Hwy framework",
   "type": "module",
   "exports": {
     ".": "./dist/index.js"
@@ -21,21 +21,14 @@
     "typecheck": "tsc"
   },
   "devDependencies": {
-    "@types/react": "npm:types-react@rc",
-    "@types/react-dom": "npm:types-react-dom@rc",
-    "react": "19.0.0-rc-f38c22b244-20240704",
-    "react-dom": "19.0.0-rc-f38c22b244-20240704",
+    "lit": "^3.1.4",
     "tsup": "^8.0.2",
     "typescript": "^5.4.4"
-  },
-  "overrides": {
-    "@types/react": "npm:types-react@rc",
-    "@types/react-dom": "npm:types-react-dom@rc"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/sjc5/hwy",
-    "directory": "packages/npm/react"
+    "directory": "packages/npm/lit"
   },
   "homepage": "https://hwy.dev",
   "bugs": "https://github.com/sjc5/hwy/issues",
