--- a/projects/testers/routes-react/package.json
+++ b/projects/testers/routes-react/package.json
@@ -2,10 +2,11 @@
   "devDependencies": {
     "@hwy-js/client": "workspace:*",
     "@hwy-js/react": "workspace:*",
-    "@types/react": "npm:types-react@rc",
-    "@types/react-dom": "npm:types-react-dom@rc",
-    "react": "19.0.0-rc-f38c22b244-20240704",
-    "react-dom": "19.0.0-rc-f38c22b244-20240704",
+    "@types/react": "^18.3.5",
+    "@types/react-dom": "^18.3.0",
+    "preact": "^10.23.2",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "typescript": "^5.4.3"
   },
   "overrides": {
