--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,13 @@
 {
-  "search.exclude": {
-    "**/.git": true,
-    "**/.DS_Store": true,
-    "**/node_modules": true,
-    "**/dist": true,
-    "**/hwy_paths.json": true,
-    "**/__nohash": true,
-    "**/hwy_client_entry.js": true
-  }
+	"editor.defaultFormatter": "biomejs.biome",
+	"typescript.tsserver.experimental.enableProjectDiagnostics": true,
+	"search.exclude": {
+		"**/.git": true,
+		"**/.DS_Store": true,
+		"**/node_modules": true,
+		"**/dist": true,
+		"**/hwy_paths.json": true,
+		"**/__nohash": true,
+		"**/hwy_client_entry.js": true
+	}
 }
