--- a/packages/npm/client/package.json
+++ b/packages/npm/client/package.json
@@ -1,38 +1,36 @@
 {
-  "name": "@hwy-js/client",
-  "version": "0.15.0-pre.28",
-  "author": {
-    "name": "Samuel J. Cook"
-  },
-  "description": "Browser-targeted utilities for Hwy framework",
-  "type": "module",
-  "exports": {
-    ".": "./dist/index.js"
-  },
-  "files": [
-    "dist"
-  ],
-  "scripts": {
-    "build": "rm -rf dist && tsup-node index.ts --format esm --dts",
-    "dev": "rm -rf dist && tsup-node index.ts --format esm --dts --watch",
-    "publish-pre": "npm publish --access public --tag pre",
-    "publish-non-pre": "npm publish --access public",
-    "update-latest": "pnpm update --latest",
-    "typecheck": "tsc"
-  },
-  "dependencies": {
-    "history": "^5.3.0"
-  },
-  "devDependencies": {
-    "tsup": "^8.0.2",
-    "typescript": "^5.4.4"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/sjc5/hwy",
-    "directory": "packages/npm/client"
-  },
-  "homepage": "https://hwy.dev",
-  "bugs": "https://github.com/sjc5/hwy/issues",
-  "sideEffects": false
+	"name": "@hwy-js/client",
+	"version": "0.15.0-pre.28",
+	"author": {
+		"name": "Samuel J. Cook"
+	},
+	"description": "Browser-targeted utilities for Hwy framework",
+	"type": "module",
+	"exports": {
+		".": "./dist/index.js"
+	},
+	"files": ["dist"],
+	"scripts": {
+		"build": "rm -rf dist && tsup-node index.ts --format esm --dts",
+		"dev": "rm -rf dist && tsup-node index.ts --format esm --dts --watch",
+		"publish-pre": "npm publish --access public --tag pre",
+		"publish-non-pre": "npm publish --access public",
+		"update-latest": "pnpm update --latest",
+		"typecheck": "tsc"
+	},
+	"dependencies": {
+		"history": "^5.3.0"
+	},
+	"devDependencies": {
+		"tsup": "^8.0.2",
+		"typescript": "^5.4.4"
+	},
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/sjc5/hwy",
+		"directory": "packages/npm/client"
+	},
+	"homepage": "https://hwy.dev",
+	"bugs": "https://github.com/sjc5/hwy/issues",
+	"sideEffects": false
 }
