--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,7 @@
 		"**/node_modules": true,
 		"**/dist": true,
 		"**/hwy_paths.json": true,
-		"**/__nohash": true,
+		"**/prehashed": true,
 		"**/hwy_client_entry.js": true
 	}
 }
