--- a/projects/docs/.gitignore
+++ b/projects/docs/.gitignore
@@ -1,6 +1,6 @@
 # Artifacts
 static/private/hwy_paths.json
-static/public/__nohash
+static/public/prehashed
 static/public/hwy_client_entry.js
 __generated*
 !dist
