--- a/projects/testers/routes-react/.gitignore
+++ b/projects/testers/routes-react/.gitignore
@@ -2,5 +2,5 @@ node_modules
 dist
 static/private/hwy_client_entry.js
 static/private/hwy_paths.json
-static/public/__nohash
+static/public/prehashed
 static/public/hwy_client_entry.js
